@@ -12,6 +12,8 @@ Legend:
 ==============================
 + Ticket #1792, Show an OSD message and a status message when a favorite is
   created via the keyboard shortcut
++ Ticket #2165, Improve the "Organize Favorites" dialog: the favorites can
+  now be deleted using the delete key or the backspace key
 * Ticket #734, A unicode encoding will now be used for the ini file. Old ASCII
   ini files will be automatically converted to unicode. Favorites with unicode
   filenames are now correctly handled when using an ini file
